--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
         git pull
         git add .
         git diff
-        git config --local user.email "GitHub@codkan20@gmail.com"
-        git config --local user.name "GitHub ffe4el"
+        git config --local user.email "codkan20@gmail.com"
+        git config --local user.name "ffe4el"
         git commit -m "Update README.md"
         git push
