--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-	- cron: "0 0 */1 * *"
+    - cron: "0 0 */1 * *"
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install feedparser
-    - name: Run Update Python Script
+    - name: Install dependencies
       run: |
         python update_readme.py
     - name: Update README.md file
