--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Python application
 
 on:
@@ -9,32 +6,30 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: "15 14 1 * *" #매일 자정 마다 업데이트
+    - cron: "15 14 * * *"  # 매일 14:15 UTC에 업데이트
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install feedparser
-    - name: Install dependencies
-      run: |
-        python update_readme.py
-    - name: Update README.md file
-      run: |
-        git pull
-        git add .
-        git diff
-        git config --local user.email "codkan20@gmail.com"
-        git config --local user.name "ffe4el"
-        git commit -m "Update README.md"
-        git push
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install feedparser
+      - name: Run update script
+        run: |
+          python update_readme.py
+      - name: Commit and push changes
+        run: |
+          git pull
+          git add README.md
+          git diff --exit-code || git commit -m "Update README.md"
+          git config --local user.email "codkan20@gmail.com"
+          git config --local user.name "ffe4el"
+          git push || echo "Nothing to push"
